--- a/index.html
+++ b/index.html
@@ -39,7 +39,24 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="fa fa-home" href="index.html"><span>Introduction</span></a></li>
+                                    <li>
+                                        <a href="" class="fa fa-bar-chart-o"><span>Home</span></a>
+                                        <ul>
+                                            <li><a href="#">Chi siamo</a></li>
+                                            <li><a href="#">Dove siamo</a></li>
+                                            <li><a href="#">Rilegature Tesi</a></li>
+                                            <li><a href="#">News</a></li>
+                                            <li>
+                                                <a href="">Phasellus consequat</a>
+                                                <ul>
+                                                    <li><a href="#">Magna phasellus</a></li>
+                                                    <li><a href="#">Etiam dolore nisl</a></li>
+                                                    <li><a href="#">Phasellus consequat</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="#">Veroeros feugiat</a></li>
+                                        </ul>
+                                    </li>
 									<li>
 										<a href="" class="fa fa-bar-chart-o"><span>Dropdown</span></a>
 										<ul>
