--- a/index.html
+++ b/index.html
@@ -53,20 +53,12 @@
 
 
 									<li>
-										<a href="" class="fa fa-bar-chart-o"><span>Dropdown</span></a>
+										<a href="" class="fa fa-bar-chart-o"><span>Servizi</span></a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
-											<li>
-												<a href="">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#">Rilegatura Tesi</a></li>
+											<li><a href="#">Plotter</a></li>
+											<li><a href="#">Stampe</a></li>
+                                            <li><a href="#">Timbri</a></li>
 										</ul>
 									</li>
 									<li><a class="fa fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
