--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
                                         </ul>
 
                                     </li>
-
+                                    <li>
+                                        <a href="" class="fa fa-bar-chart-o"><span>Libri</span></a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="fa fa-bar-chart-o"><span>Rilegatura Tesi</span></a>
+                                    </li>
 
 									<li>
 										<a href="" class="fa fa-bar-chart-o"><span>Servizi</span></a>
@@ -58,10 +63,17 @@
 											<li><a href="#">Rilegatura Tesi</a></li>
 											<li><a href="#">Plotter</a></li>
 											<li><a href="#">Stampe</a></li>
-                                            <li><a href="#">Timbri</a></li> 
+                                            <li><a href="#">Timbri</a></li>
 										</ul>
 									</li>
-									<li><a class="fa fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
+                                    <li>
+                                        <a href="" class="fa fa-bar-chart-o"><span>Editoria</span></a>
+                                        <ul>
+                                            <li><a href="#">Sito UP</a></li>
+                                            <li><a href="#">Sito DOWN</a></li>
+                                         </ul>
+                                    </li>
+									<li><a class="fa fa-cog" href="left-sidebar.html"><span>Universitalia Editrice</span></a></li>
 									<li><a class="fa fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
 									<li><a class="fa fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
 								</ul>
