--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
                                     </li>
                                     <li>
-                                        <a href="" class="fa fa-bar-chart-o"><span>Libri</span></a>
+                                        <a href="" class="fa fa-book"><span>Libri</span></a>
                                     </li>
                                     <li>
-                                        <a href="" class="fa fa-bar-chart-o"><span>Rilegatura Tesi</span></a>
+                                        <a href="" class="fa fa-bookmark"><span>Rilegatura Tesi</span></a>
                                     </li>
 
 									<li>
-										<a href="" class="fa fa-bar-chart-o"><span>Servizi</span></a>
+										<a href="" class="fa fa-tasks"><span>Servizi</span></a>
 										<ul>
 											<li><a href="#">Rilegatura Tesi</a></li>
 											<li><a href="#">Plotter</a></li>
@@ -67,7 +67,7 @@
 										</ul>
 									</li>
                                     <li>
-                                        <a href="" class="fa fa-bar-chart-o"><span>Editoria</span></a>
+                                        <a href="" class="fa fa-bookmark-o"><span>Editoria</span></a>
                                         <ul>
                                             <li><a href="#">Sito UP</a></li>
                                             <li><a href="#">Sito DOWN</a></li>
@@ -100,8 +100,8 @@
 										<header>
 											<h3>Okay, so what is this?</h3>
 										</header>
-										<p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template 
-										by <a href="http://html5up.net/">HTML5 UP</a>. Free for personal and commercial use under the 
+										<p><strong>Universitalia s.r.l</strong>
+										by <a href="http://html5up.net/">HTML5 UP</a>. Free for personal and commercial use under the
 										<a href="http://html5up.net/license/">CCA 3.0 license</a>.</p>
 									</section>
 
