--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                                     </li>
                                     <li>
                                         <a href="" class="fa fa-book"><span>Libri</span></a>
+                                        <ul>
+                                            <li><a href="#">Ricerca Libri</a></li>
+                                            <li><a href="#">Test d'ingresso</a></li>
+                                        </ul>
                                     </li>
                                     <li>
                                         <a href="" class="fa fa-bookmark"><span>Rilegatura Tesi</span></a>
@@ -60,7 +64,6 @@
 									<li>
 										<a href="" class="fa fa-tasks"><span>Servizi</span></a>
 										<ul>
-											<li><a href="#">Rilegatura Tesi</a></li>
 											<li><a href="#">Plotter</a></li>
 											<li><a href="#">Stampe</a></li>
                                             <li><a href="#">Timbri</a></li>
@@ -69,11 +72,11 @@
                                     <li>
                                         <a href="" class="fa fa-bookmark-o"><span>Editoria</span></a>
                                         <ul>
+                                            <li><a href="#">Pubblica con noi</a></li>
                                             <li><a href="#">Sito UP</a></li>
                                             <li><a href="#">Sito DOWN</a></li>
                                          </ul>
                                     </li>
-									<li><a class="fa fa-cog" href="left-sidebar.html"><span>Universitalia Editrice</span></a></li>
 									<li><a class="fa fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
 									<li><a class="fa fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
 								</ul>
