modifica scritta title Serena

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                         <ul>
                                             <li><a href="#">Chi siamo</a></li>
                                             <li><a href="#">Dove siamo</a></li>
-                                            <li><a href="#">Rilegature Tesi</a></li>
+                                            <li><a href="rilegaturaTesi.html">Rilegature Tesi</a></li>
                                             <li><a href="#">News</a></li>
 
                                         </ul>
