--- a/rilegaturaTesi.html
+++ b/rilegaturaTesi.html
@@ -26,7 +26,7 @@
 	</head>
 	<body class="no-sidebar">
 
-		<!-- Header Wrapper --> 
+		<!-- Header Wrapper -->
 			<div id="header-wrapper">
 						
 				<!-- Header -->
@@ -37,31 +37,49 @@
 							<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
 						
 						<!-- Nav -->
-							<nav id="nav">
-								<ul>
-									<li><a class="fa fa-home" href="index.html"><span>Introduction</span></a></li>
-									<li>
-										<a href="" class="fa fa-bar-chart-o"><span>Dropdown</span></a>
-										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
-											<li>
-												<a href="">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
-										</ul>
-									</li>
-									<li><a class="fa fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
-									<li><a class="fa fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
-									<li><a class="fa fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
-								</ul>
-							</nav>
+                        <nav id="nav">
+                            <ul>
+                                <li>
+                                    <a class="fa fa-home" href="index.html"><span>Home</span></a>
+                                    <ul>
+                                        <li><a href="#">Chi siamo</a></li>
+                                        <li><a href="#">Dove siamo</a></li>
+                                        <li><a href="rilegaturaTesi.html">Rilegature Tesi</a></li>
+                                        <li><a href="#">News</a></li>
+
+                                    </ul>
+
+                                </li>
+                                <li>
+                                    <a href="" class="fa fa-book"><span>Libri</span></a>
+                                    <ul>
+                                        <li><a href="#">Ricerca Libri</a></li>
+                                        <li><a href="#">Test d'ingresso</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="rilegaturaTesi.html" class="fa fa-bookmark"><span>Rilegatura Tesi</span></a>
+                                </li>
+
+                                <li>
+                                    <a href="" class="fa fa-tasks"><span>Servizi</span></a>
+                                    <ul>
+                                        <li><a href="#">Plotter</a></li>
+                                        <li><a href="#">Stampe</a></li>
+                                        <li><a href="#">Timbri</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="" class="fa fa-bookmark-o"><span>Editoria</span></a>
+                                    <ul>
+                                        <li><a href="#">Pubblica con noi</a></li>
+                                        <li><a href="#">Sito UP</a></li>
+                                        <li><a href="#">Sito DOWN</a></li>
+                                    </ul>
+                                </li>
+
+                            </ul>
+                        </nav>
 
 					</div>
 
