modifica scritta title Serena

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                         <a href="" class="fa fa-book"><span>Libri</span></a>
                                         <ul>
                                             <li><a href="#">Ricerca Libri</a></li>
-                                            <li><a href="#">Test d'ingresso</a></li>
+                                            <li><a href="TestIngresso.html">Test d'ingresso</a></li>
                                         </ul>
                                     </li>
                                     <li>
@@ -64,9 +64,9 @@
 									<li>
 										<a href="" class="fa fa-tasks"><span>Servizi</span></a>
 										<ul>
-											<li><a href="#">Plotter</a></li>
-											<li><a href="#">Stampe</a></li>
-                                            <li><a href="#">Timbri</a></li>
+											<li><a href="plotter.html">Plotter</a></li>
+											<li><a href="stampe.html">Stampe</a></li>
+                                            <li><a href="timbri.html">Timbri</a></li>
 										</ul>
 									</li>
                                     <li>
