modifica scritta title Serena

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                         <ul>
                                             <li><a href="#">Chi siamo</a></li>
                                             <li><a href="#">Dove siamo</a></li>
-                                            <li><a href="rilegaturaTesi.html">Rilegature Tesi</a></li>
+                                            <li><a href="#">Rilegature Tesi</a></li>
                                             <li><a href="#">News</a></li>
 
                                         </ul>
@@ -72,7 +72,7 @@
                                     <li>
                                         <a href="" class="fa fa-bookmark-o"><span>Editoria</span></a>
                                         <ul>
-                                            <li><a href="#">Pubblica con noi</a></li>
+                                            <li><a href="pubblicaconnoi.html">Pubblica con noi</a></li>
                                             <li><a href="#">Sito UP</a></li>
                                             <li><a href="#">Sito DOWN</a></li>
                                          </ul>
