--- a/timbri.html
+++ b/timbri.html
@@ -44,7 +44,7 @@
                                     <ul>
                                         <li><a href="#">Chi siamo</a></li>
                                         <li><a href="#">Dove siamo</a></li>
-                                        <li><a href="rilegaturaTesi.html">Rilegature Tesi</a></li>
+                                        <li><a href="#">Rilegature Tesi</a></li>
                                         <li><a href="#">News</a></li>
 
                                     </ul>
@@ -54,7 +54,7 @@
                                     <a href="" class="fa fa-book"><span>Libri</span></a>
                                     <ul>
                                         <li><a href="#">Ricerca Libri</a></li>
-                                        <li><a href="#">Test d'ingresso</a></li>
+                                        <li><a href="TestIngresso.html">Test d'ingresso</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -64,20 +64,19 @@
                                 <li>
                                     <a href="" class="fa fa-tasks"><span>Servizi</span></a>
                                     <ul>
-                                        <li><a href="#">Plotter</a></li>
-                                        <li><a href="#">Stampe</a></li>
-                                        <li><a href="#">Timbri</a></li>
+                                        <li><a href="plotter.html">Plotter</a></li>
+                                        <li><a href="stampe.html">Stampe</a></li>
+                                        <li><a href="timbri.html">Timbri</a></li>
                                     </ul>
                                 </li>
                                 <li>
                                     <a href="" class="fa fa-bookmark-o"><span>Editoria</span></a>
                                     <ul>
-                                        <li><a href="#">Pubblica con noi</a></li>
+                                        <li><a href="pubblicaconnoi.html">Pubblica con noi</a></li>
                                         <li><a href="#">Sito UP</a></li>
                                         <li><a href="#">Sito DOWN</a></li>
                                     </ul>
                                 </li>
-
                             </ul>
                         </nav>
 
