href rilegatura tesi

--- a/rilegaturaTesi.html
+++ b/rilegaturaTesi.html
@@ -64,15 +64,15 @@
                                 <li>
                                     <a href="" class="fa fa-tasks"><span>Servizi</span></a>
                                     <ul>
-                                        <li><a href="#">Plotter</a></li>
-                                        <li><a href="#">Stampe</a></li>
-                                        <li><a href="#">Timbri</a></li>
+                                        <li><a href="plotter.html">Plotter</a></li>
+                                        <li><a href="stampe.html">Stampe</a></li>
+                                        <li><a href="timbri.html">Timbri</a></li>
                                     </ul>
                                 </li>
                                 <li>
                                     <a href="" class="fa fa-bookmark-o"><span>Editoria</span></a>
                                     <ul>
-                                        <li><a href="#">Pubblica con noi</a></li>
+                                        <li><a href="pubblicaconnoi.html">Pubblica con noi</a></li>
                                         <li><a href="#">Sito UP</a></li>
                                         <li><a href="#">Sito DOWN</a></li>
                                     </ul>
