inserite informazioni modificata la prima pagina con indicizzazioni

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Universitalia s.r.l</title>
+		<title>Universitalia S.r.l</title>
         <link rel="shortcut icon" href="{UPLOAD_PATH}favicon.ico" type="image/x-icon" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
@@ -43,8 +43,8 @@
                                     <li>
                                         <a class="fa fa-home" href="index.html"><span>Home</span></a>
                                         <ul>
-                                            <li><a href="#">Chi siamo</a></li>
-                                            <li><a href="#">Dove siamo</a></li>
+                                            <li><a href="#chisiamo">Chi siamo</a></li>
+                                            <li><a href="#dovesiamo">Dove siamo</a></li>
                                             <li><a href="#">Rilegature Tesi</a></li>
                                             <li><a href="#">News</a></li>
 
@@ -84,78 +84,6 @@
 					</div>
 
 			</div>
-			
-		<!-- Features Wrapper -->
-			<div id="features-wrapper">
-
-				<!-- Features -->
-					<section id="features" class="container">
-						<header>
-							<h2>Gentlemen, behold! This is <strong>Strongly Typed</strong>!</h2>
-						</header>
-						<div class="row">
-							<div class="4u">
-
-								<!-- Feature -->
-									<section>
-										<a href="http://regularjane.deviantart.com/art/Old-Reads-363428235" class="image image-full"><img src="images/pic01.jpg" alt="" /></a>
-										<header>
-											<h3>Okay, so what is this?</h3>
-										</header>
-										<p><strong>Universitalia s.r.l</strong>
-										by <a href="http://html5up.net/">HTML5 UP</a>. Free for personal and commercial use under the
-										<a href="http://html5up.net/license/">CCA 3.0 license</a>.</p>
-									</section>
-
-							</div>
-							<div class="4u">
-
-								<!-- Feature -->
-									<section>
-										<a href="http://regularjane.deviantart.com/art/Nutella-359114563" class="image image-full"><img src="images/pic02.jpg" alt="" /></a>
-										<header>
-											<h3>Nice! What is HTML5 UP?</h3>
-										</header>
-										<p><a href="http://html5up.net/">HTML5 UP</a> is a side project of <a href="http://n33.co">AJ’s</a> (ie. me).  
-										I started it as a way to both test my <a href="http://skeljs.org">skelJS</a> framework (formerly 
-										5grid) and sharpen up my design skills a bit.</p>
-									</section>
-									
-							</div>
-							<div class="4u">
-
-								<!-- Feature -->
-									<section>
-										<a href="http://regularjane.deviantart.com/art/Solo-Spring-358679786" class="image image-full"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>skelJS? WTF is that?</h3>
-										</header>
-										<p><a href="http://skeljs.org">skelJS</a> is a lightweight framework for building responsive 
-										sites and apps. All of my designs at <a href="http://html5up.net/">HTML5 UP</a> (including this 
-										one) are built on this framework.</p>
-									</section>
-
-							</div>
-						</div>
-						<ul class="actions">
-							<li><a href="#" class="button button-icon fa fa-file">Tell Me More</a></li>
-						</ul>
-					</section>
-			
-			</div>
-		
-		<!-- Banner Wrapper -->
-			<div id="banner-wrapper">
-				<div class="inner">
-
-					<!-- Banner -->
-						<section id="banner" class="container">
-							<p>Use this space for <strong>profound thoughts</strong>.<br />
-							Or an enormous ad. Whatever.</p>
-						</section>
-
-				</div>
-			</div>
 
 		<!-- Main Wrapper -->
 			<div id="main-wrapper">
@@ -170,8 +98,7 @@
 									<!-- Post -->
 										<article class="is-post">
 											<header>
-												<h2><a href="#">I don’t want to say <strong>it’s the aliens</strong> ...<br />
-												but it’s the aliens.</a></h2>
+												<h2><a name="chisiamo">Chi Siamo</a></h2>
 											</header>
 											<a href="http://regularjane.deviantart.com/art/Write-354865228" class="image image-full"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>I mean isn't it possible?</h3>
@@ -234,40 +161,15 @@
 													<!-- Excerpt -->
 														<article class="is-excerpt">
 															<header>
-																<span class="date">May 18, 2013</span>
-																<h3><a href="#">Ermergerd sterf herpernd</a></h3>
+																<h2><a name="dovesiamo">Dove siamo</a></h2>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est 
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
-														</article>
+                                                            <p>La nostra libreria è raggiungibile sia da Via di Tor Vergata,143 sia da Via di Passolombardo,421.</p>
+                                                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2971.943728169065!2d12.626552000000007!3d41.851038!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132587ff308b9443%3A0xb86c1ae011f30d81!2sUniversitalia+di+Onorati+srl!5e0!3m2!1sit!2sit!4v1397421686380" width="370" height="450" frameborder="0" style="border:0"></iframe>
+														    <p><br />Sita di fronte alla Cappella Universitaria e alla Facoltà di Economia.</p>
+                                                        </article>
 
 												</li>
-												<li>
 
-													<!-- Excerpt -->
-														<article class="is-excerpt">
-															<header>
-																<span class="date">May 15, 2013</span>
-																<h3><a href="#">Kerfer merks mer herper</a></h3>
-															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est 
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
-														</article>
-
-												</li>
-												<li>
-
-													<!-- Excerpt -->
-														<article class="is-excerpt">
-															<header>
-																<span class="date">May 12, 2013</span>
-																<h3><a href="#">Blerg persts er fern</a></h3>
-															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est 
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
-														</article>
-
-												</li>
 											</ul>
 										</section>
 								
@@ -358,48 +260,54 @@
 									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet 
 									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur 
 									leo nibh, rutrum eu malesuada.</p>
-									<div class="row">
-										<ul class="icons 6u">
-											<li class="fa fa-home">
-												1234 Somewhere Road<br />
-												Nashville, TN 00000<br />
-												USA
-											</li>
-											<li class="fa fa-phone">
-												(000) 000-0000
-											</li>
-											<li class="fa fa-envelope">
-												<a href="#">info@untitled.tld</a>
-											</li>
-										</ul>
-										<ul class="icons 6u">
-											<li class="fa fa-twitter">
-												<a href="http://twitter.com/n33co">@untitled-tld</a>
-											</li>
-											<li class="fa fa-dribbble">
-												<a href="http://dribbble.com/n33">dribbble.com/untitled-tld</a>
-											</li>
-											<li class="fa fa-facebook">
-												<a href="#">facebook.com/untitled-tld</a>
-											</li>
-											<li class="fa fa-google-plus">
-												<a href="#">google.com/+untitled-tld</a>
-											</li>
-										</ul>
-									</div>
+                                    <div class="row">
+                                        <ul class="icons 6u">
+                                            <li class="fa fa-home">
+                                                Via di Tor Vergata, 143<br />
+                                                Roma, 00133<br />
+                                                Italia
+                                            </li>
+                                            <li class="fa fa-phone">
+                                                (06)2026342
+                                            </li>
+                                            <li class="fa fa-print">
+                                                (06)20419483
+                                            </li>
+                                            <li class="fa fa-clock-o">
+                                                8:00 - 18:30<br />
+                                                Sabato 8:00 - 12:30
+                                            </li>
+                                        </ul>
+                                        <ul class="icons 6u">
+                                            <li class="fa fa-envelope">
+                                                info@universitaliasrl.it
+                                            </li>
+                                            <li class="fa fa-facebook">
+                                                <a href="https://www.facebook.com/groups/35057244586/?fref=ts">Universitalia</a>
+                                            </li>
+                                            <li class="fa fa-skype">
+                                                universitaliasas@hotmail.it
+                                            </li>
+                                        </ul>
+                                    </div>
 								</section>
 							</div>
 						</div>
 					</div>
 
 				<!-- Copyright -->
-					<div id="copyright" class="container">
-						<ul class="links">
-							<li>&copy; Untitled. All rights reserved</li>
-							<li>Design: <a href="http://html5up.net/">HTML5 UP</a></li>
-						</ul>
-					</div>
-
+                <div id="copyright" class="container">
+                    <ul class="links">
+                        <li><b> UniversItalia editrice S.r.l.</b> - Via di Tor Vergata,143 - Roma 00133 - Tel. 06/20.26.342 - Fax. 06/20.41.94.83<br />
+                            Email: info@universitaliasrl.it - IdSkype: universitaliasas@hotmail.it - Sito web:<a href=" http://www.unipass.it"> http://www.unipass.it</a>
+                        </li>
+                        <li></li>
+                    </ul>
+                    <ul class="links">
+                        <li>&copy; Copyrights 2014. Tutti i diritti sono riservati</li>
+                        <li>Design by: <a href="https://www.linkedin.com/pub/marzia-magheri/69/979/355">Marzia Magheri</a> e <a href="https://www.linkedin.com/pub/serena-onorati/46/678/508">Serena Onorati</a></li>
+                    </ul>
+                </div>
 			</div>
 
 	</body>
