--- a/rilegaturaTesi.html
+++ b/rilegaturaTesi.html
@@ -211,35 +211,36 @@
 									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet 
 									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur 
 									leo nibh, rutrum eu malesuada.</p>
-									<div class="row">
-										<ul class="icons 6u">
-											<li class="fa fa-home">
-												1234 Somewhere Road<br />
-												Nashville, TN 00000<br />
-												USA
-											</li>
-											<li class="fa fa-phone">
-												(000) 000-0000
-											</li>
-											<li class="fa fa-envelope">
-												<a href="#">info@untitled.tld</a>
-											</li>
-										</ul>
-										<ul class="icons 6u">
-											<li class="fa fa-twitter">
-												<a href="http://twitter.com/n33co">@untitled-tld</a>
-											</li>
-											<li class="fa fa-dribbble">
-												<a href="http://dribbble.com/n33">dribbble.com/untitled-tld</a>
-											</li>
-											<li class="fa fa-facebook">
-												<a href="#">facebook.com/untitled-tld</a>
-											</li>
-											<li class="fa fa-google-plus">
-												<a href="#">google.com/+untitled-tld</a>
-											</li>
-										</ul>
-									</div>
+                                    <div class="row">
+                                        <ul class="icons 6u">
+                                            <li class="fa fa-home">
+                                                Via di Tor Vergata, 143<br />
+                                                Roma, 00133<br />
+                                                Italia
+                                            </li>
+                                            <li class="fa fa-phone">
+                                                (06)2026342
+                                            </li>
+                                            <li class="fa fa-print">
+                                                (06)20419483
+                                            </li>
+                                            <li class="fa fa-clock-o">
+                                                8:00 - 18:30<br />
+                                                Sabato 8:00 - 12:30
+                                            </li>
+                                        </ul>
+                                        <ul class="icons 6u">
+                                            <li class="fa fa-envelope">
+                                                info@universitaliasrl.it
+                                            </li>
+                                            <li class="fa fa-facebook">
+                                                <a href="https://www.facebook.com/groups/35057244586/?fref=ts">Universitalia</a>
+                                            </li>
+                                            <li class="fa fa-skype">
+                                                universitaliasas@hotmail.it
+                                            </li>
+                                        </ul>
+                                    </div>
 								</section>
 							</div>
 						</div>
@@ -247,13 +248,17 @@
 
 				<!-- Copyright -->
 					<div id="copyright" class="container">
+                        <ul class="links">
+                            <li><b> UniversItalia editrice S.r.l.</b> - Via di Tor Vergata,143 - Roma 00133 - Tel. 06/20.26.342 - Fax. 06/20.41.94.83<br />
+                                Email: info@universitaliasrl.it - IdSkype: universitaliasas@hotmail.it - Sito web:<a href=" http://www.unipass.it"> http://www.unipass.it</a>
+                            </li>
+                            <li></li>
+                        </ul>
 						<ul class="links">
-							<li>&copy; Untitled. All rights reserved</li>
-							<li>Design: <a href="http://html5up.net/">HTML5 UP</a></li>
+							<li>&copy; Copyrights 2014. Tutti i diritti sono riservati</li>
+							<li>Design by: <a href="https://www.linkedin.com/pub/marzia-magheri/69/979/355">Marzia Magheri</a> e <a href="https://www.linkedin.com/pub/serena-onorati/46/678/508">Serena Onorati</a></li>
 						</ul>
 					</div>
-
 			</div>
-
 	</body>
 </html>
