--- a/stampe.html
+++ b/stampe.html
@@ -121,8 +121,8 @@
                     <li>
                         <img src="images/images_slideshow_images_text/large/6.jpg" alt="image06"/>
                         <div class="ei-title">
-                            <h3>Cataloghi, Libretti</h3>
-                            <h3>Manuali</h3>
+                            <h3>Cataloghi, Libretti e Manuali</h3>
+                            
                         </div>
                     </li>
                     <li>
@@ -135,8 +135,8 @@
                     <li>
                         <img src="images/images_slideshow_images_text/large/2.jpg" alt="image02" />
                         <div class="ei-title">
-                            <h3>Biglietti da visita</h3>
-                            <h3>Etichette</h3>
+                            <h3>Biglietti da visita, Etichette</h3>
+
                         </div>
                     </li>
                     <li>
