--- a/plotter.html
+++ b/plotter.html
@@ -219,7 +219,7 @@
                             <!-- Excerpt -->
                             <article class="is-excerpt">
                                 <header>
-                                    <h2><a name="dovesiamo">Prezzi</a></h2>
+                                    <h2>Prezzi</h2>
                                 </header>
                                 <h3>Progetti CAD Vettoriali</h3>
 
