--- a/plotter.html
+++ b/plotter.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <title>Universitalia S.r.l</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="{UPLOAD_PATH}favicon.ico" type="image/x-icon" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -219,7 +219,7 @@
                             <!-- Excerpt -->
                             <article class="is-excerpt">
                                 <header>
-                                    <h2>Prezzi</h2>
+                                    <h2><a name="dovesiamo">Prezzi</a></h2>
                                 </header>
                                 <h3>Progetti CAD Vettoriali</h3>
 
