--- a/pubblicaconnoi.html
+++ b/pubblicaconnoi.html
@@ -54,7 +54,7 @@
                                     <a href="" class="fa fa-book"><span>Libri</span></a>
                                     <ul>
                                         <li><a href="#">Ricerca Libri</a></li>
-                                        <li><a href="TestIngresso.html">Test d'ingresso</a></li>
+                                        <li><a href="testIngresso.html">Test d'ingresso</a></li>
                                     </ul>
                                 </li>
                                 <li>
