Modifiche varie Template libri da finire - non funzionano le animazioni non si vedono le imnmagini

--- a/stampe.html
+++ b/stampe.html
@@ -197,7 +197,7 @@
         <!--end slideshow_images_text-->
         <header>
             <h3>I tuoi file li puoi inviare anche da casa!</h3>
-            <p>Inviali per email o porta la tua pen-drive o CD il tutto al costo di 0,032&euro;per pagina </p>
+            <p>Inviali per email o porta la tua pen-drive o CD il tutto al costo di 0,032&euro; per pagina.</p>
         </header>
     </article>
 
@@ -272,7 +272,7 @@
     <!-- Footer -->
     <div id="footer" class="container">
         <header>
-            <h2>Questions or comments? <strong>Get in touch:</strong></h2>
+            <h2>Domande o commenti?</h2>
         </header>
         <div class="row">
             <div class="6u">
@@ -280,7 +280,7 @@
                     <form method="post" action="#">
                         <div class="row half">
                             <div class="6u">
-                                <input name="name" placeholder="Name" type="text" class="text" />
+                                <input name="name" placeholder="Nome" type="text" class="text" />
                             </div>
                             <div class="6u">
                                 <input name="email" placeholder="Email" type="text" class="text" />
@@ -288,12 +288,12 @@
                         </div>
                         <div class="row half">
                             <div class="12u">
-                                <textarea name="message" placeholder="Message"></textarea>
+                                <textarea name="message" placeholder="Messaggio"></textarea>
                             </div>
                         </div>
                         <div class="row half">
                             <div class="12u">
-                                <a href="#" class="button button-icon fa fa-envelope">Send Message</a>
+                                <a href="#" class="button button-icon fa fa-envelope">Invia</a>
                             </div>
                         </div>
                     </form>
@@ -301,9 +301,7 @@
             </div>
             <div class="6u">
                 <section>
-                    <p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-                        mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-                        leo nibh, rutrum eu malesuada.</p>
+
                     <div class="row">
                         <ul class="icons 6u">
                             <li class="fa fa-home">
