--- a/rilegaturaTesi.html
+++ b/rilegaturaTesi.html
@@ -176,75 +176,73 @@
 		<!-- Footer Wrapper -->
 			<div id="footer-wrapper">
 
-				<!-- Footer -->
-					<div id="footer" class="container">
-						<header>
-							<h2>Questions or comments? <strong>Get in touch:</strong></h2>
-						</header>
-						<div class="row">
-							<div class="6u">
-								<section>
-									<form method="post" action="#">
-										<div class="row half">
-											<div class="6u">
-												<input name="name" placeholder="Name" type="text" class="text" />
-											</div>
-											<div class="6u">
-												<input name="email" placeholder="Email" type="text" class="text" />
-											</div>
-										</div>
-										<div class="row half">
-											<div class="12u">
-												<textarea name="message" placeholder="Message"></textarea>
-											</div>
-										</div>
-										<div class="row half">
-											<div class="12u">
-												<a href="#" class="button button-icon fa fa-envelope">Send Message</a>
-											</div>
-										</div>
-									</form>
-								</section>
-							</div>
-							<div class="6u">
-								<section>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet 
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur 
-									leo nibh, rutrum eu malesuada.</p>
-                                    <div class="row">
-                                        <ul class="icons 6u">
-                                            <li class="fa fa-home">
-                                                Via di Tor Vergata, 143<br />
-                                                Roma, 00133<br />
-                                                Italia
-                                            </li>
-                                            <li class="fa fa-phone">
-                                                (06)2026342
-                                            </li>
-                                            <li class="fa fa-print">
-                                                (06)20419483
-                                            </li>
-                                            <li class="fa fa-clock-o">
-                                                8:00 - 18:30<br />
-                                                Sabato 8:00 - 12:30
-                                            </li>
-                                        </ul>
-                                        <ul class="icons 6u">
-                                            <li class="fa fa-envelope">
-                                                info@universitaliasrl.it
-                                            </li>
-                                            <li class="fa fa-facebook">
-                                                <a href="https://www.facebook.com/groups/35057244586/?fref=ts">Universitalia</a>
-                                            </li>
-                                            <li class="fa fa-skype">
-                                                universitaliasas@hotmail.it
-                                            </li>
-                                        </ul>
+                <!-- Footer -->
+                <div id="footer" class="container">
+                    <header>
+                        <h2>Domande o commenti?</h2>
+                    </header>
+                    <div class="row">
+                        <div class="6u">
+                            <section>
+                                <form method="post" action="#">
+                                    <div class="row half">
+                                        <div class="6u">
+                                            <input name="name" placeholder="Nome" type="text" class="text" />
+                                        </div>
+                                        <div class="6u">
+                                            <input name="email" placeholder="Email" type="text" class="text" />
+                                        </div>
                                     </div>
-								</section>
-							</div>
-						</div>
-					</div>
+                                    <div class="row half">
+                                        <div class="12u">
+                                            <textarea name="message" placeholder="Messaggio"></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="row half">
+                                        <div class="12u">
+                                            <a href="#" class="button button-icon fa fa-envelope">Invia</a>
+                                        </div>
+                                    </div>
+                                </form>
+                            </section>
+                        </div>
+                        <div class="6u">
+                            <section>
+
+                                <div class="row">
+                                    <ul class="icons 6u">
+                                        <li class="fa fa-home">
+                                            Via di Tor Vergata, 143<br />
+                                            Roma, 00133<br />
+                                            Italia
+                                        </li>
+                                        <li class="fa fa-phone">
+                                            (06)2026342
+                                        </li>
+                                        <li class="fa fa-print">
+                                            (06)20419483
+                                        </li>
+                                        <li class="fa fa-clock-o">
+                                            8:00 - 18:30<br />
+                                            Sabato 8:00 - 12:30
+                                        </li>
+                                    </ul>
+                                    <ul class="icons 6u">
+                                        <li class="fa fa-envelope">
+                                            info@universitaliasrl.it
+                                        </li>
+                                        <li class="fa fa-facebook">
+                                            <a href="https://www.facebook.com/groups/35057244586/?fref=ts">Universitalia</a>
+                                        </li>
+                                        <li class="fa fa-skype">
+                                            universitaliasas@hotmail.it
+                                        </li>
+                                    </ul>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </div>
 
 				<!-- Copyright -->
 					<div id="copyright" class="container">
