commit merge template test d'ingresso seconda prova (serena)

--- a/TestIngresso.html
+++ b/TestIngresso.html
@@ -24,8 +24,8 @@
 			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
         <!--Book_preview-->
-        <link rel="stylesheet" type="text/css" href="css/css_book_preview/normalize.css" />
-        <link rel="stylesheet" type="text/css" href="css/css_book_preview/demo.css" />
+        <!--<link rel="stylesheet" type="text/css" href="css/css_book_preview/normalize.css" />
+        <link rel="stylesheet" type="text/css" href="css/css_book_preview/demo.css" />-->
         <link rel="stylesheet" type="text/css" href="css/css_book_preview/bookblock.css" />
         <link rel="stylesheet" type="text/css" href="css/css_book_preview/component.css" />
         <script src="js/js_book_preview/modernizr.custom.js"></script>
