--- a/rilegaturaTesi.html
+++ b/rilegaturaTesi.html
@@ -200,7 +200,7 @@
                                     </div>
                                     <div class="row half">
                                         <div class="12u">
-                                            <a href="#" class="button button-icon fa fa-envelope">Invia</a>
+                                            <a href="#" class="button button-icon fa fa-envelope" onclick="Modulo()">Invia</a>
                                         </div>
                                     </div>
                                 </form>
