--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="rilegaturaTesi.html" class="fa fa-bookmark"><span>Rilegatura Tesi</span></a>
+                                        <a href="rilegaturaTesi.html" class="fa fa-graduation-cap"><span>Rilegatura Tesi</span></a>
                                     </li>
 
 									<li>
-										<a href="" class="fa fa-tasks"><span>Servizi</span></a>
+										<a href="" class="fa fa-print"><span>Servizi</span></a>
 										<ul>
 											<li><a href="plotter.html">Plotter</a></li>
 											<li><a href="stampe.html">Stampe</a></li>
@@ -73,7 +73,7 @@
 										</ul>
 									</li>
                                     <li>
-                                        <a href="" class="fa fa-bookmark-o"><span>Editoria</span></a>
+                                        <a href="" class="fa fa-book"><span>Editoria</span></a>
                                         <ul>
                                             <li><a href="http://universitaliaeditrice.it/" target="_blank">Pubblica con noi</a></li>
                                          </ul>
