--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <nav id="nav">
                             <br>
                             <h1 id="logo"><a href="#">Universitalia</a></h1><br><br><br>
-                            <ul>
+                            <ul id="icone">
                                 <li>
                                     <a class="fa fa-home" href="index.html"><span>Home</span></a>
                                     <ul>
@@ -97,9 +97,9 @@
 
 									<!-- Post -->
 										<article class="is-post">
-											<header>
+											<!--<header>
 												<h2><a name="chisiamo">Chi Siamo</a></h2>
-											</header>
+											</header>-->
 											<a href="http://regularjane.deviantart.com/art/Write-354865228" class="image image-full"><img src="images/pic04.jpg" alt="" /></a>
 											<p></p>
 										</article>
@@ -127,9 +127,9 @@
 
 													<!-- Excerpt -->
 														<article class="is-excerpt">
-															<header>
+															<!--<header>
 																<h2><a name="dovesiamo">Dove siamo</a></h2>
-															</header>
+															</header>-->
                                                             <p>La nostra libreria è raggiungibile sia da Via di Tor Vergata,143 sia da Via di Passolombardo,421.</p>
                                                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2971.943728169065!2d12.626552000000007!3d41.851038!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132587ff308b9443%3A0xb86c1ae011f30d81!2sUniversitalia+di+Onorati+srl!5e0!3m2!1sit!2sit!4v1397421686380" width="370" height="450" frameborder="0" style="border:0"></iframe>
 														    <p><br />Sita di fronte alla Cappella Universitaria e alla Facoltà di Economia.</p>
