Intestazione - favicon - immagine tesi

--- a/rilegaturaTesi.html
+++ b/rilegaturaTesi.html
@@ -99,7 +99,7 @@
 											<header>
 												<h2>Rilegatura Tesi in <b>1 ORA</b></h2>
 											</header>
-											<span class="image image-full"><img src="images/pic04.jpg" alt="" /></span>
+											<span class="image image-full"><img src="images/tesi.jpg" alt="" /></span>
 											<h3>in Pelle o Tela con Incisione</h3>
 											<p><b style="color: #D4A017">Oro</b>  <b style="color: #C0C0C0">Argento</b>  <b style="color: #CC0000">Rossa</b>  <b style="color: #CC0066">Fucsia</b>  <b style="color: #663399">Blu</b>  <b style="color: #339933">Verde</b></p>
 											<div id="3D"><h3>Prendi 4 paghi 3</h3></div>
