Intestazione - favicon - immagine tesi

--- a/plotter.html
+++ b/plotter.html
@@ -46,7 +46,7 @@
         <nav id="nav">
             <br>
             <h1 id="logo"><a href="#">Universitalia</a></h1><br><br><br>
-            <ul>
+            <ul id="icone">
                 <li>
                     <a class="fa fa-home" href="index.html"><span>Home</span></a>
                     <ul>
